--- a/DataCollect.ipynb
+++ b/DataCollect.ipynb
@@ -35,67 +35,222 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies = {\n",
+    "    'interstellar' : 8,\n",
+    "    'inception' : 11,\n",
+    "    'fantastic-four-2015' : 3,\n",
+    "    'logan-2017' : 4,\n",
+    "    'transformers-the-last-knight' : 2,\n",
+    "    'venom-2018' : 6,\n",
+    "    'transformers' : 6,\n",
+    "    'transformers-age-of-extinction' : 4,\n",
+    "    'transformers-dark-of-the-moon' : 4,\n",
+    "    'men-in-black-international' : 2,\n",
+    "    'joker' : 27,\n",
+    "    'titanic' : 2,\n",
+    "    'v-for-vendetta' : 4,\n",
+    "    'the-matrix' : 3,\n",
+    "    'the-dark-knight' : 15,\n",
+    "    'the-phantom-of-the-opera' : 0,\n",
+    "    'man-of-steel' : 11,\n",
+    "    'the-godfather' : 5,\n",
+    "    'justice-league' : 7,\n",
+    "    'whiplash' : 3,\n",
+    "    'la-la-land' : 3,\n",
+    "    'arrival' : 3,\n",
+    "    'blade-runner-2049' : 5,\n",
+    "    'gravity' : 8,\n",
+    "    'the-maze-runner' : 2\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success parasite 1/3\n",
-      "Success parasite 2/3\n",
-      "Success parasite 3/3\n",
-      "Success suicide-squad 1/8\n",
-      "Success suicide-squad 2/8\n",
-      "Success suicide-squad 3/8\n",
-      "Success suicide-squad 4/8\n",
-      "Success suicide-squad 5/8\n",
-      "Success suicide-squad 6/8\n",
-      "Success suicide-squad 7/8\n",
-      "Success suicide-squad 8/8\n",
-      "Success birds-of-prey-and-the-fantabulous-emancipation-of-one-harley-quinn 1/3\n",
-      "Success birds-of-prey-and-the-fantabulous-emancipation-of-one-harley-quinn 2/3\n",
-      "Success birds-of-prey-and-the-fantabulous-emancipation-of-one-harley-quinn 3/3\n",
-      "Success green-lantern 1/3\n",
-      "Success green-lantern 2/3\n",
-      "Success green-lantern 3/3\n",
-      "Success transformers-revenge-of-the-fallen 1/8\n",
-      "Success transformers-revenge-of-the-fallen 2/8\n",
-      "Success transformers-revenge-of-the-fallen 3/8\n",
-      "Success transformers-revenge-of-the-fallen 4/8\n",
-      "Success transformers-revenge-of-the-fallen 5/8\n",
-      "Success transformers-revenge-of-the-fallen 6/8\n",
-      "Success transformers-revenge-of-the-fallen 7/8\n",
-      "Success transformers-revenge-of-the-fallen 8/8\n",
-      "Success cats 1/2\n",
-      "Success cats 2/2\n",
-      "Success captain-marvel 1/21\n",
-      "Success captain-marvel 2/21\n",
-      "Success captain-marvel 3/21\n",
-      "Success captain-marvel 4/21\n",
-      "Success captain-marvel 5/21\n",
-      "Success captain-marvel 6/21\n",
-      "Success captain-marvel 7/21\n",
-      "Success captain-marvel 8/21\n",
-      "Success captain-marvel 9/21\n",
-      "Success captain-marvel 10/21\n",
-      "Success captain-marvel 11/21\n",
-      "Success captain-marvel 12/21\n",
-      "Success captain-marvel 13/21\n",
-      "Success captain-marvel 14/21\n",
-      "Success captain-marvel 15/21\n",
-      "Success captain-marvel 16/21\n",
-      "Success captain-marvel 17/21\n",
-      "Success captain-marvel 18/21\n",
-      "Success captain-marvel 19/21\n",
-      "Success captain-marvel 20/21\n",
-      "Success captain-marvel 21/21\n",
-      "Success catwoman 1/1\n",
-      "Success fifty-shades-of-grey 1/3\n",
-      "Success fifty-shades-of-grey 2/3\n",
-      "Success fifty-shades-of-grey 3/3\n",
-      "Success about-time 1/1\n"
+      "Success interstellar 1/8\n",
+      "Success interstellar 2/8\n",
+      "Success interstellar 3/8\n",
+      "Success interstellar 4/8\n",
+      "Success interstellar 5/8\n",
+      "Success interstellar 6/8\n",
+      "Success interstellar 7/8\n",
+      "Success interstellar 8/8\n",
+      "Crawling Success interstellar\n",
+      "Success inception 1/11\n",
+      "Success inception 2/11\n",
+      "Success inception 3/11\n",
+      "Success inception 4/11\n",
+      "Success inception 5/11\n",
+      "Success inception 6/11\n",
+      "Success inception 7/11\n",
+      "Success inception 8/11\n",
+      "Success inception 9/11\n",
+      "Success inception 10/11\n",
+      "Success inception 11/11\n",
+      "Crawling Success inception\n",
+      "Success fantastic-four-2015 1/3\n",
+      "Success fantastic-four-2015 2/3\n",
+      "Success fantastic-four-2015 3/3\n",
+      "Crawling Success fantastic-four-2015\n",
+      "Success logan-2017 1/4\n",
+      "Success logan-2017 2/4\n",
+      "Success logan-2017 3/4\n",
+      "Success logan-2017 4/4\n",
+      "Crawling Success logan-2017\n",
+      "Success transformers-the-last-knight 1/2\n",
+      "Success transformers-the-last-knight 2/2\n",
+      "Crawling Success transformers-the-last-knight\n",
+      "Success venom-2018 1/6\n",
+      "Success venom-2018 2/6\n",
+      "Success venom-2018 3/6\n",
+      "Success venom-2018 4/6\n",
+      "Success venom-2018 5/6\n",
+      "Success venom-2018 6/6\n",
+      "Crawling Success venom-2018\n",
+      "Success transformers 1/6\n",
+      "Success transformers 2/6\n",
+      "Success transformers 3/6\n",
+      "Success transformers 4/6\n",
+      "Success transformers 5/6\n",
+      "Success transformers 6/6\n",
+      "Crawling Success transformers\n",
+      "Success transformers-age-of-extinction 1/4\n",
+      "Success transformers-age-of-extinction 2/4\n",
+      "Success transformers-age-of-extinction 3/4\n",
+      "Success transformers-age-of-extinction 4/4\n",
+      "Crawling Success transformers-age-of-extinction\n",
+      "Success transformers-dark-of-the-moon 1/4\n",
+      "Success transformers-dark-of-the-moon 2/4\n",
+      "Success transformers-dark-of-the-moon 3/4\n",
+      "Success transformers-dark-of-the-moon 4/4\n",
+      "Crawling Success transformers-dark-of-the-moon\n",
+      "Success men-in-black-international 1/2\n",
+      "Success men-in-black-international 2/2\n",
+      "Crawling Success men-in-black-international\n",
+      "Success joker 1/27\n",
+      "Success joker 2/27\n",
+      "Success joker 3/27\n",
+      "Success joker 4/27\n",
+      "Success joker 5/27\n",
+      "Success joker 6/27\n",
+      "Success joker 7/27\n",
+      "Success joker 8/27\n",
+      "Success joker 9/27\n",
+      "Success joker 10/27\n",
+      "Success joker 11/27\n",
+      "Success joker 12/27\n",
+      "Success joker 13/27\n",
+      "Success joker 14/27\n",
+      "Success joker 15/27\n",
+      "Success joker 16/27\n",
+      "Success joker 17/27\n",
+      "Success joker 18/27\n",
+      "Success joker 19/27\n",
+      "Success joker 20/27\n",
+      "Success joker 21/27\n",
+      "Success joker 22/27\n",
+      "Success joker 23/27\n",
+      "Success joker 24/27\n",
+      "Success joker 25/27\n",
+      "Success joker 26/27\n",
+      "Success joker 27/27\n",
+      "Crawling Success joker\n",
+      "Success titanic 1/2\n",
+      "Success titanic 2/2\n",
+      "Crawling Success titanic\n",
+      "Success v-for-vendetta 1/4\n",
+      "Success v-for-vendetta 2/4\n",
+      "Success v-for-vendetta 3/4\n",
+      "Success v-for-vendetta 4/4\n",
+      "Crawling Success v-for-vendetta\n",
+      "Success the-matrix 1/3\n",
+      "Success the-matrix 2/3\n",
+      "Success the-matrix 3/3\n",
+      "Crawling Success the-matrix\n",
+      "Success the-dark-knight 1/15\n",
+      "Success the-dark-knight 2/15\n",
+      "Success the-dark-knight 3/15\n",
+      "Success the-dark-knight 4/15\n",
+      "Success the-dark-knight 5/15\n",
+      "Success the-dark-knight 6/15\n",
+      "Success the-dark-knight 7/15\n",
+      "Success the-dark-knight 8/15\n",
+      "Success the-dark-knight 9/15\n",
+      "Success the-dark-knight 10/15\n",
+      "Success the-dark-knight 11/15\n",
+      "Success the-dark-knight 12/15\n",
+      "Success the-dark-knight 13/15\n",
+      "Success the-dark-knight 14/15\n",
+      "Success the-dark-knight 15/15\n",
+      "Crawling Success the-dark-knight\n",
+      "Crawling Success the-phantom-of-the-opera\n",
+      "Success man-of-steel 1/11\n",
+      "Success man-of-steel 2/11\n",
+      "Success man-of-steel 3/11\n",
+      "Success man-of-steel 4/11\n",
+      "Success man-of-steel 5/11\n",
+      "Success man-of-steel 6/11\n",
+      "Success man-of-steel 7/11\n",
+      "Success man-of-steel 8/11\n",
+      "Success man-of-steel 9/11\n",
+      "Success man-of-steel 10/11\n",
+      "Success man-of-steel 11/11\n",
+      "Crawling Success man-of-steel\n",
+      "Success the-godfather 1/5\n",
+      "Success the-godfather 2/5\n",
+      "Success the-godfather 3/5\n",
+      "Success the-godfather 4/5\n",
+      "Success the-godfather 5/5\n",
+      "Crawling Success the-godfather\n",
+      "Success justice-league 1/7\n",
+      "Success justice-league 2/7\n",
+      "Success justice-league 3/7\n",
+      "Success justice-league 4/7\n",
+      "Success justice-league 5/7\n",
+      "Success justice-league 6/7\n",
+      "Success justice-league 7/7\n",
+      "Crawling Success justice-league\n",
+      "Success whiplash 1/3\n",
+      "Success whiplash 2/3\n",
+      "Success whiplash 3/3\n",
+      "Crawling Success whiplash\n",
+      "Success la-la-land 1/3\n",
+      "Success la-la-land 2/3\n",
+      "Success la-la-land 3/3\n",
+      "Crawling Success la-la-land\n",
+      "Success arrival 1/3\n",
+      "Success arrival 2/3\n",
+      "Success arrival 3/3\n",
+      "Crawling Success arrival\n",
+      "Success blade-runner-2049 1/5\n",
+      "Success blade-runner-2049 2/5\n",
+      "Success blade-runner-2049 3/5\n",
+      "Success blade-runner-2049 4/5\n",
+      "Success blade-runner-2049 5/5\n",
+      "Crawling Success blade-runner-2049\n",
+      "Success gravity 1/8\n",
+      "Success gravity 2/8\n",
+      "Success gravity 3/8\n",
+      "Success gravity 4/8\n",
+      "Success gravity 5/8\n",
+      "Success gravity 6/8\n",
+      "Success gravity 7/8\n",
+      "Success gravity 8/8\n",
+      "Crawling Success gravity\n",
+      "Success the-maze-runner 1/2\n",
+      "Success the-maze-runner 2/2\n",
+      "Crawling Success the-maze-runner\n"
      ]
     }
    ],
